--- a/templates/skills.html
+++ b/templates/skills.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Skills</title>
 </head>
 <body>
-
+    <h1>найдено со скиллом {{ skill }}: {{ candidates_len }}</h1>
+    {% if candidates|length > 1 %}
+        {% for candidate in candidates %}
+            <p><a href="/candidate/{{ candidate.id }}">{{ candidate.name }}</a></p>
+        {% endfor %}
+    {% else %}
+        <h1>Кандидатов нет</h1>
+    {% endif %}
 </body>
 </html>
