--- a/templates/skills.html
+++ b/templates/skills.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>найдено со скиллом {{ skill }}: {{ candidates_len }}</h1>
-    {% if candidates|length > 1 %}
+    {% if candidates|length >= 1 %}
         {% for candidate in candidates %}
             <p><a href="/candidate/{{ candidate.id }}">{{ candidate.name }}</a></p>
         {% endfor %}
